Fixed layout issues

--- a/app/styles/contact.scss
+++ b/app/styles/contact.scss
@@ -1,11 +1,4 @@
-/**************************************************************************************************
-Contact
-**************************************************************************************************/
-
-
-
-
-@media(max-width: 2650px){
+@media(max-width: 2650px) and (min-width: 1921px){
 
   .contact-picture {
     margin-left: 48.5%;
@@ -25,7 +18,52 @@ Contact
   }
 }
 
-@media(max-width: 1440px){
+
+@media(max-width: 1920px) and (min-width: 1641px){
+
+  .contact-picture {
+    margin-left: 47.5%;
+    margin-right: 46.5%;
+  }
+  .contact-links {
+    padding-left: 9%;
+  }
+  .email-container {
+    padding-left: 15%;
+  }
+  .social-container {
+    padding-left: 5.5%;
+  }
+  .resume-container {
+    padding-left: 6%;
+  }
+
+}
+
+
+@media(max-width: 1640px) and (min-width: 1441px){
+
+  .contact-picture {
+    margin-left: 47%;
+    margin-right: 45%;
+  }
+  .contact-links {
+    padding-left: 6.5%;
+  }
+  .email-container {
+    padding-left: 15%;
+  }
+  .social-container {
+    padding-left: 6%;
+  }
+  .resume-container {
+    padding-left: 6%;
+  }
+
+}
+
+
+@media(max-width: 1440px) and (min-width: 1281px){
 
   .contact-picture {
     margin-left: 46.5%;
@@ -45,7 +83,35 @@ Contact
   }
 }
 
-@media(max-width: 1024px){
+
+@media(max-width: 1280px) and (min-width: 1025px){
+
+  .contact-picture {
+    margin-left: 46.5%;
+    margin-right: 46.5%;
+  }
+  .contact-links {
+    padding-left: 6%;
+  }
+  .contact-links, .row {
+    margin-right: 0 !important;
+  }
+  .email-container {
+    padding-left: 15%;
+  }
+  .social-container {
+    padding-left: 4.5%;
+  }
+  .resume-container {
+    padding-left: 6%;
+  }
+
+
+
+}
+
+
+@media(max-width: 1024px) and (min-width: 769px){
 
   .contact-picture {
     margin-left: 45.5%;
@@ -65,7 +131,7 @@ Contact
   }
 }
 
-@media(max-width: 768px){
+@media(max-width: 768px) and (min-width: 426px){
 
   .contact-picture {
     margin-left: 44%;
@@ -75,54 +141,133 @@ Contact
     padding-left: 12.5%;
   }
   .email-container {
-    padding-left: 2%;
-    display: inline-block;
+    padding-left: 34%;
+    margin-bottom: 50px;
+    // display: inline-block;
   }
   .social-container {
-    padding-left: 5.1%;
-    position: relative;
-    bottom: 0px;
-    top: 18px;
-    display: inline-block;
+    padding-left: 27%;
+    margin-bottom: 50px;
+    // position: relative;
+    // bottom: 50px;
+    // // top: 0px;
+    // display: inline-block;
   }
   .resume-container {
-    padding-left: 2%;
-    display: inline-block;
+    padding-left: 40%;
+
+    // display: inline-block;
   }
 }
 
-@media(max-width: 425px){
+@media(max-width: 425px) and (min-width: 376px){
 
   #contact {
-    font-size: 10px;
+    font-size: 12px;
   }
   .contact-picture {
-    margin-left: 46.5%;
-    margin-right: 46.5%;
+    margin-left: 39.5%;
+    // margin-right: 46.5%;
   }
   .contact-links {
-    padding-left: 0;
+    padding-left: 12.5%;
   }
   .email-container {
-    padding-left: 10px;
-    width: 425px;
-    display: block;
+    padding-left: 29.5%;
+    margin-bottom: 50px;
+    // display: inline-block;
+  }
+  .email-link {
+    position: relative;
+    right: 7px;
   }
   .social-container {
-    padding-left: 5.1%;
-    width: 425px;
-    display: block;
+    padding-left: 15.5%;
+    margin-bottom: 50px;
+    // position: relative;
+    // bottom: 50px;
+    // // top: 0px;
+    // display: inline-block;
   }
   .resume-container {
-    padding-left: 0px;
-    width: 425px;
-    display: block;
+    padding-left: 39%;
+
+    // display: inline-block;
   }
 }
 
 
+@media(max-width: 375px) and (min-width: 321px){
+
+  #contact {
+    font-size: 12px;
+  }
+  .contact-picture {
+    margin-left: 39.5%;
+    // margin-right: 46.5%;
+  }
+  .contact-links {
+    padding-left: 12.5%;
+  }
+  .email-container {
+    padding-left: 29.5%;
+    margin-bottom: 50px;
+    // display: inline-block;
+  }
+  .email-link {
+    position: relative;
+    right: 7px;
+  }
+  .social-container {
+    padding-left: 14%;
+    margin-bottom: 50px;
+    // position: relative;
+    // bottom: 50px;
+    // // top: 0px;
+    // display: inline-block;
+  }
+  .resume-container {
+    padding-left: 39.5%;
+
+    // display: inline-block;
+  }
+
+}
 
 
-/**************************************************************************************************
-the end
-**************************************************************************************************/
+@media(max-width: 320px){
+
+  #contact {
+    font-size: 12px;
+  }
+  .contact-picture {
+    margin-left: 37%;
+    // margin-right: 46.5%;
+  }
+  .contact-links {
+    padding-left: 12.5%;
+  }
+  .email-container {
+    padding-left: 29.5%;
+    margin-bottom: 50px;
+    // display: inline-block;
+  }
+  .email-link {
+    position: relative;
+    right: 7px;
+  }
+  .social-container {
+    padding-left: 1%;
+    margin-bottom: 50px;
+    // position: relative;
+    // bottom: 50px;
+    // // top: 0px;
+    // display: inline-block;
+  }
+  .resume-container {
+    padding-left: 40%;
+
+    // display: inline-block;
+  }
+
+}
